--- a/traveller/src/main/webapp/css/style.css
+++ b/traveller/src/main/webapp/css/style.css
@@ -1,5 +1,45 @@
 @charset "UTF-8";
 
+
+/*나브바*/
+.menu {
+  width: 1200px;
+  overflow: hidden;
+  margin: 0px auto;
+}
+
+.menu > li {
+  width: 20%; /*20*5=100%*/
+  float: left;
+  text-align: center;
+  line-height: 40px;
+  background-color: #FFFFFF;
+}
+
+.menu a {
+  color: #FFFFFF;
+}
+
+.submenu > li {
+  line-height: 50px;
+  background-color: #FFFFFF;
+}
+
+.submenu {
+  height: 0; /*ul의 높이를 안보이게 처리*/
+  overflow: hidden;
+}
+
+.menu > li:hover {
+  background-color: #FFFFFF;
+  transition-duration: 0.5s;
+}
+
+.menu > li:hover .submenu {
+  height: 250px; /*서브메뉴 li한개의 높이 50*5*/
+  transition-duration: 1s;
+}
+  
 /* 전체 레이아웃
 ------------------------------*/
 .global_menu{
@@ -10,7 +50,9 @@
 .fr{
 	float:right;
 }
-
+.fl{
+	float:left;
+}
 .global_menu li {
     height: 48px;
     float: left;
@@ -24,20 +66,34 @@
     letter-spacing: -0.3px;
 }
 
+.private_menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex; /* Flexbox를 사용하여 가로로 배열 */
+}
+
+.private_menu ul li {
+    margin: 5px;
+    text-align: center;
+}
+
+.private_menu ul li a{
+    display: block;
+    font-size: 12px;
+    line-height: 15px;
+    position: relative;
+    color: #333;
+    padding: 8px; /* 조절 가능한 여백 */
+    text-decoration: none; /* 링크에 밑줄 제거 */
+}
+
 .private_menu {
-    list-style: none; /* Remove default list styles */
-    padding: 0; /* Remove default padding */
+    padding: 2px 10px 20px 10px;
+    height: 20px;
+    background-color: #FFFFFF;
+    display: inline-block; /* 추가: 메뉴를 가로로 배열하기 위해 inline-block 설정 */
 }
-
-.private_menu li {
-    display: inline-block; /* 리스트 아이템을 같은 줄에 표시 */
-    margin-right: 10px; /* 메뉴 아이템 사이의 간격 조절 */
-}
-
-.align-right {
-    text-align: right; /* 텍스트를 오른쪽으로 정렬 */
-}
-
 
 body{
 	width:1200px;
@@ -100,11 +156,12 @@ a:hover{
 #main_nav{
 	padding:2px 10px 20px 10px;
 	height:20px;
-	background-color:#C1BFBF;
+	background-color:#FFFFFF;
+	clear:both;
 }
 #main_nav ul{
 	list-style:none;
-	margin:0;
+	margin-top:50px;
 	padding:0;
 }
 #main_nav ul li{
