--- a/traveller/src/main/webapp/css/eunseo.css
+++ b/traveller/src/main/webapp/css/eunseo.css
@@ -1,16 +1,21 @@
 @charset "UTF-8";
 /* 마이페이지 */
 .mypage-div1{
-	width:48%;
+	width:40%;
+	height:200px;
 	float:left;
+	padding-top:50px;
+}
+.color{
 	margin-top:30px;
+	background-color:#e1e8f0;
 }
 .mypage-div1 ul li{
 	line-height:1.8em;
 	font-size:12pt;
 }
 .mypage-div2{
-	width:48%;
+	width:55%;
 	float:right;
 	margin-top:30px;
 }
