--- a/traveller/src/main/webapp/css/detailStyle.css
+++ b/traveller/src/main/webapp/css/detailStyle.css
@@ -4,31 +4,57 @@
 	margin-top: 50px;
 }
 .detail-page{
-	width: 1000px;
+	width: 800px;
 	position: absolute;
 	margin-left:400px;
 }
 .detail-content{
 	margin-left:50px;
+	border: 1px solid;
 }
 .detail-content h2{
 	margin-top:50px;
-}
-.detail-detailcontent p{
-	padding: 30px;
-}
-.detail-detailcontent p{
-	padding: 30px;
-}
-.detail-center{
-	text-align:center;
 }
 .detail-content > ul > li{
 	text-align:right;
 	margin-right:30px;
 	padding:30px;
 }
-
+.detail-detailcontent p{
+	padding: 30px;
+}
+.detail-detailcontent p{
+	padding: 30px;
+}
+.detail-detailcontent [type="button"]{
+	box-shadow: none;
+	margin-bottom: 30px;
+	border:none;
+	font-weight: bold;
+	background-color: #575656;
+	color: white;
+	font-size: 11pt;
+	padding: 15px 20px 15px 20px;
+	border-radius: 10px 10px 10px 10px;
+}
+.detail-reply{
+	margin: 20px;
+}
+[type="submit"], .detail-output [type="button"]{
+	box-shadow: none;
+	border:none;
+	margin-top: 10px;
+	background-color: #a1a1a1;
+	color: white;
+	font-size: 8pt;
+	padding: 5px 3px 5px 3px;
+}
+.detail-center{
+	text-align:center;
+}
+.detail-right{
+	text-align:right;
+}
 
 
 
