--- a/traveller/src/main/webapp/css/detailStyle.css
+++ b/traveller/src/main/webapp/css/detailStyle.css
@@ -7,7 +7,7 @@
 .detail-page{
 	width: 800px;
 	position: absolute;
-	margin-left:400px;
+	margin-left: 400px;
 }
 .detail-content{
 	margin-left:50px;
@@ -88,27 +88,39 @@
 }
 
 /*-------수정폼-------*/
+.form-title{
+	font-size: 15pt;
+	font-weight: bold;
+	margin: 0 0 20px 0;
+}
 .input-form li{
 	margin: 20px;
 }
 li label{
 	font-weight: bold;
-	font-size: 17px;
+	font-size: 14px;
 	display:inline-block;
 	text-align:left;
 	width:150px;
 }
+.file-right{
+	text-align: right;
+	margin-right: 40px;
+}
 [type="text"], [type="number"],[type="password"]{
 	width:500px;
+	border-width: 0 0 1px 0;
 }
 [type="radio"]:checked {
 	border: 0.4em solid black;
 }
 [type="date"]{
 	width:250px;
+	border-width: 0 0 1px 0;
 }
 textarea{
 	width:500px;
+	height:300px;
 }
 input[type=radio]{
 	appearance: none;
