--- a/traveller/src/main/webapp/css/find.css
+++ b/traveller/src/main/webapp/css/find.css
@@ -14,3 +14,41 @@
 ul {
     list-style: none;
 }
+.mt28 {
+    margin-top: 2.8rem!important;
+}
+.text_wrap .tit{
+	font-size: 2.4rem;
+	line-height: 1.21;
+	letter-spacing: -.144rem;
+	color: black;
+}
+.text_wrap .txt{  
+    font-size: 1.3rem;
+    line-height: 1.38;
+    letter-spacing: -.078rem;
+    color: #111;
+    margin-top: 1.6rem;
+}
+.grey_box.big{
+    padding: 3rem!important;
+    border-radius: 1.2rem;
+    margin: 4.4rem 2.6rem 0;
+}
+.grey_box{
+	background: #f5f5f5;
+}
+.list_line li:last-of-type {
+    padding-bottom: 0;
+}
+.grey_box .list_line li{
+    padding: .8rem 0;
+    text-align: center;
+}
+.list_line li {
+    position: relative;
+    font-size: 1.4rem;
+    line-height: 2;
+    letter-spacing: -.028rem;
+    color: #111;
+}
