아이디/비밀번호찾기 CSS(완)

--- a/traveller/src/main/webapp/css/find.css
+++ b/traveller/src/main/webapp/css/find.css
@@ -38,6 +38,13 @@ ul {
 .grey_box{
 	background: #f5f5f5;
 }
+.list_line li{
+	position: relative;
+    font-size: 1.4rem;
+    line-height: 2;
+    letter-spacing: -.028rem;
+    color: black;
+}
 .list_line li:last-of-type {
     padding-bottom: 0;
 }
@@ -51,4 +58,55 @@ ul {
     line-height: 2;
     letter-spacing: -.028rem;
     color: #111;
+}
+.login_wrap .bottom_wrap {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 -5px 15px 0 rgba(17,17,17,.1);
+    padding: 1.6rem 2.6rem;
+}
+.login_wrap .bottom_wrap .btn_wrap {
+    padding: 0;
+    margin: 0;
+}
+.btn_wrap.btn_wrap {
+    justify-content: center;
+}
+.btn_wrap {
+    display: flex;
+    border: none;
+    text-align: center;
+    padding: 0 2.6rem;
+    margin-top: 3.2rem;
+}
+
+.btn.em {
+    background-color: #5e2bb8!important;
+    color: #fff!important;
+    border-color: #5e2bb8;
+}
+
+.btn {
+    display: flex;
+    flex: 1 1 auto;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    border: 1px solid #e5e5e5;
+    background: #fff;
+    height: 4rem;
+    line-height: .62;
+    font-size: 1.3rem;
+    letter-spacing: -.052rem;
+    margin: 0;
+    padding-top: 0;
+    border-radius: 2.5rem;
+    transition: none;
+    text-transform: none;
+    box-shadow: none;
+    color: #111;
+    cursor: pointer;
 }
