연락처/비밀번호 수정 css(완)

--- a/traveller/src/main/webapp/css/register.css
+++ b/traveller/src/main/webapp/css/register.css
@@ -187,3 +187,8 @@ input[type="checkbox"]{
     position: relative;
     accent-color: #bbd6f0;
 }
+.my-btn-align{
+	text-align:center;
+	padding-left:160px;
+	padding-right:90px;
+}
