--- a/traveller/src/main/webapp/css/register.css
+++ b/traveller/src/main/webapp/css/register.css
@@ -119,6 +119,8 @@ input{
 input[type="text"],input[type="password"],input[type="email"]{
 	width:310px;
 }
+/* 회원가입 폼
+------------------------------*/
 #register_form input[id="id"]{
 	width:223px;
 	height: 40px;
@@ -180,18 +182,23 @@ input[id="home"]:hover{
 	transform: scale(1.1);
 }
 input[type="checkbox"]{
-    display: inline-block;
     width: 18px;
     height: 18px;
     border:3px solid #707070;
     position: relative;
     accent-color: #bbd6f0;
+    line-height: 40px;
+    display:inline-block;
+    vertical-align:middle;
+    line-height: 40px;
 }
 .my-btn-align{
 	text-align:center;
 	padding-left:160px;
 	padding-right:90px;
 }
+/* 관리자 상품등록 폼
+------------------------------*/
 input[type=file]{
 	width: 300px;
 	height: 40px;
@@ -217,4 +224,8 @@ input[type=file]{
 }
 .admin-ul > li input[id="price"]{
 	display:inline;
+}
+label[for="gender"],label[for="style1"],label[for="style2"],label[for="style3"],label[for="push"],label[for="auth"] {
+	position: relative;
+    top: -11px;
 }
